# Minori_EN_MOD

./: .gitignore  CMakeLists.txt  CMakePresets.json  Minori_EN_MOD.sln  README.md  note.txt
Minori_EN_MOD/: Minori_EN_MOD.sln
Minori_EN_MOD/EFFAAHook_EN2JP/: EFFAAHook_EN2JP.cpp  EFFAAHook_EN2JP.vcxproj
Minori_EN_MOD/EFLAAHook_EN2JP/: EFLAAHook_EN2JP.cpp  EFLAAHook_EN2JP.vcxproj  EFLAAHook_EN2JP.vcxproj.filters
Minori_EN_MOD/EdenHook_EN2CN/: EdenHook_EN2CN.cpp  EdenHook_EN2CN.vcxproj  EdenHook_EN2CN.vcxproj.filters
Minori_EN_MOD/EdenPMHook_EN2CN/: EdenPMHook_EN2CN.cpp  EdenPMHook_EN2CN.vcxproj  EdenPMHook_EN2CN.vcxproj.filters
Minori_EN_MOD/EdenPMHook_EN2JP/: EdenPMHook_EN2JP.cpp  EdenPMHook_EN2JP.vcxproj  EdenPMHook_EN2JP.vcxproj.filters
Minori_EN_MOD/Modules/EFFAAHook_EN2JP/: EFFAAHook_EN2JP.cpp  EFFAAHook_EN2JP.vcxproj  EFFAAHook_EN2JP.vcxproj.filters
Minori_EN_MOD/Modules/EFLAAHook_EN2JP/: EFLAAHook_EN2JP.cpp  EFLAAHook_EN2JP.vcxproj
Minori_EN_MOD/Tools/: Tools.cpp  Tools.h  Tools.vcxproj  Tools.vcxproj.filters
lib/MinoriFileHook/: CMakeLists.txt  MinoriFileHook.cpp  MinoriFileHook.h  MinoriFileHook.vcxproj  MinoriFileHook.vcxproj.filters
lib/MinoriFileHook/src/: MinoriFileHook.cpp  MinoriFileHook.h  MinoriFileHook_DEF.h
lib/Rhk/: Rhk.vcxproj  Rhk.vcxproj.filters  RxHook.h
lib/RxHook/: CMakeLists.txt
lib/RxHook/RxHook/: API.cpp  Mem.cpp  Mem.h  Write.cpp
lib/RxHook/src/: API.cpp  Hook.cpp  Mem.cpp
src/EF_First_AA_EN2JP/: CMakeLists.txt  EF_First_AA_EN2JP.vcxproj  dllmain.cpp
src/EF_Latter_AA_EN2JP/: CMakeLists.txt  EF_Latter_AA_EN2JP.vcxproj  dllmain.cpp
src/EdenPM_EN2CN/: CMakeLists.txt  EdenPM_EN2CN.vcxproj  dllmain.cpp
src/EdenPM_EN2JP/: CMakeLists.txt  EdenPM_EN2JP.vcxproj  dllmain.cpp
src/Eden_EN2CN/: CMakeLists.txt  Eden_EN2CN.vcxproj  dllmain.cpp
src/Eden_EN2JP/: CMakeLists.txt  Eden_EN2JP.vcxproj  dllmain.cpp
src/SimpleLoader/: CMakeLists.txt  SimpleLoader.cpp  SimpleLoader.vcxproj  SimpleLoader.vcxproj.filters
(+16 files in other folders)
